--- a/contactos.html
+++ b/contactos.html
@@ -41,5 +41,7 @@
     © 2026 Voyage Travel Agency.
   </footer>
 
+  <script type="text/javascript" src="contactos.js"></script>
+
 </body>
 </html>
